--- a/messaging/index.html
+++ b/messaging/index.html
@@ -23,9 +23,10 @@ limitations under the License.
   <!-- Material Design Theming -->
   <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.orange-indigo.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  
+
   <!-- New code to be included-->
   <script src="https://www.gstatic.com/firebasejs/5.6.0/firebase.js"></script>
+  <script src="https://requirejs.org/docs/release/2.3.6/minified/require.js"></script>
   <script src="app.js"></script>
   <!-- New code to be included-->
 
